Archive2/35/6d8a5194f59190/output
main.cpp: In function 'main':
main.cpp:14:9: error: implicit declaration of function 'sleep' [-Wimplicit-function-declaration]
         sleep(10);
         ^
main.cpp:8:20: warning: variable 'time_final' set but not used [-Wunused-but-set-variable]
         struct tm *time_final;
                    ^
